# parse_vacantions

./: README.md  draft.py  main.py  pyproject.toml
classes/: abstractclass.py  headhunter.py  json_editor.py  superjob.py  vacancies.py
saved_data/: vacancies.json
utils/: format_vacancies.py  hello.py  user_interface.py
