[tool.poetry]
name = "parse-vacantions"
version = "0.1.0"
description = ""
authors = ["Maxim Abavi <afghan1363@ya.ru>"]
readme = "README.md"
packages = [{include = "parse_vacantions"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
